Fix build for JDK 7/8.

--- a/byte-buddy/pom.xml
+++ b/byte-buddy/pom.xml
@@ -373,16 +373,15 @@
                                         <relocation>
                                             <pattern>${shade.asm.source}</pattern>
                                             <shadedPattern>${shade.asm.target}</shadedPattern>
-                                            <includes>
-                                                <include>org.ow2.asm:*</include>
-                                            </includes>
                                         </relocation>
                                         <relocation>
                                             <pattern>${shade.asmjdkbridge.source}</pattern>
                                             <shadedPattern>${shade.asmjdkbridge.target}</shadedPattern>
-                                            <includes>
-                                                <include>codes.rafael.asmjdkbridge:*</include>
-                                            </includes>
+                                        </relocation>
+                                        <relocation>
+                                            <pattern>codes/rafael/asmjdkbridge</pattern>
+                                            <shadedPattern>net/bytebuddy/jar/asmjdkbridge</shadedPattern>
+                                            <rawString>true</rawString>
                                         </relocation>
                                     </relocations>
                                     <filters>
