--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,11 +19,11 @@ jobs:
       - uses: actions/checkout@1d96c772d19495a3b5c517cd2bc0cb401ea0529f # v4.1.3
       - uses: actions/setup-java@6a0805fcefea3d4657a47ac4c165951e33482018 # v4.2.2
         with:
-          java-version: 24-ea
+          java-version: 25-ea
           distribution: temurin
           cache: maven
       - name: Build project
-        run: ./mvnw verify -Pjava24
+        run: ./mvnw verify -Pjava25
         continue-on-error: false
   hotspot-supported:
     name: Any (supported)
@@ -68,7 +68,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        java: [ 9, 10, 12, 13, 14, 15, 16, 18, 19, 20, 22, 23 ]
+        java: [ 9, 10, 12, 13, 14, 15, 16, 18, 19, 20, 22, 23, 24 ]
     runs-on: ubuntu-24.04
     needs: [ extended ]
     steps:
