--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,6 @@
         <bytecode.main.version>1.5</bytecode.main.version>
         <bytecode.test.version>1.6</bytecode.test.version>
         <pitest.target>net.bytebuddy</pitest.target>
-        <nexus.url>https://central.sonatype.com</nexus.url>
         <version.asm>9.8</version.asm>
         <version.asmjdkbridge>0.0.9</version.asmjdkbridge>
         <version.jna>5.12.1</version.jna>
@@ -78,7 +77,7 @@
         <version.plugin.compiler>3.10.1</version.plugin.compiler>
         <version.plugin.install>3.0.1</version.plugin.install>
         <version.plugin.deploy>3.0.0</version.plugin.deploy>
-        <version.plugin.staging>0.7.0</version.plugin.staging>
+        <version.plugin.publishing>0.7.0</version.plugin.publishing>
         <version.plugin.versions>2.18.0</version.plugin.versions>
         <version.plugin.javadoc>3.4.0</version.plugin.javadoc>
         <version.plugin.source>3.2.1</version.plugin.source>
@@ -423,17 +422,6 @@
         </plugins>
     </reporting>
 
-    <distributionManagement>
-        <snapshotRepository>
-            <id>central</id>
-            <url>${nexus.url}/content/repositories/snapshots</url>
-        </snapshotRepository>
-        <repository>
-            <id>central</id>
-            <url>${nexus.url}/service/local/staging/deploy/maven2</url>
-        </repository>
-    </distributionManagement>
-
     <profiles>
         <profile>
             <id>publish</id>
@@ -446,7 +434,7 @@
                     <plugin>
                         <groupId>org.sonatype.central</groupId>
                         <artifactId>central-publishing-maven-plugin</artifactId>
-                        <version>0.7.0</version>
+                        <version>${version.plugin.publishing}</version>
                         <extensions>true</extensions>
                         <configuration>
                             <autoPublish>true</autoPublish>
@@ -470,7 +458,6 @@
                 <version.plugin.compiler>3.6.2</version.plugin.compiler>
                 <version.plugin.install>2.5.2</version.plugin.install>
                 <version.plugin.deploy>2.8.2</version.plugin.deploy>
-                <version.plugin.publishing>0.7.0</version.plugin.publishing>
                 <version.plugin.versions>2.4</version.plugin.versions>
                 <version.plugin.source>2.4</version.plugin.source>
                 <version.plugin.gpg>1.6</version.plugin.gpg>
