--- a/byte-buddy/pom.xml
+++ b/byte-buddy/pom.xml
@@ -189,7 +189,8 @@
                                 jdk.unsupported,
                                 net.bytebuddy.agent,
                                 com.sun.jna,
-                                com.sun.jna.platform
+                                com.sun.jna.platform,
+                                com.github.spotbugs.annotations
                             </static-requires>
                             <main-class>net.bytebuddy.build.Plugin$Engine$Default</main-class>
                         </configuration>
