Attempt to duplicate source files.

--- a/byte-buddy-agent/pom.xml
+++ b/byte-buddy-agent/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -18,11 +19,12 @@
         <packages.list>net.bytebuddy.agent,net.bytebuddy.agent.utility.nullability</packages.list>
         <native.compiler.32>i686-w64-mingw32-gcc</native.compiler.32>
         <native.compiler.64>x86_64-w64-mingw32-gcc</native.compiler.64>
-        <net.bytebuddy.test.jnapath />
+        <net.bytebuddy.test.jnapath/>
     </properties>
 
     <name>Byte Buddy agent</name>
-    <description>The Byte Buddy agent offers convenience for attaching an agent to the local or a remote VM.</description>
+    <description>The Byte Buddy agent offers convenience for attaching an agent to the local or a remote VM.
+    </description>
 
     <!--
       The JNA dependency can be excluded safely. Byte Buddy will safely discover the
@@ -207,7 +209,9 @@
                                     <arguments>
                                         <argument>-shared</argument>
                                         <argument>-o</argument>
-                                        <argument>${project.basedir}/src/main/resources/win32-x86/attach_hotspot_windows.dll</argument>
+                                        <argument>
+                                            ${project.basedir}/src/main/resources/win32-x86/attach_hotspot_windows.dll
+                                        </argument>
                                         <argument>${project.basedir}/src/main/c/attach_hotspot_windows.c</argument>
                                     </arguments>
                                 </configuration>
@@ -223,7 +227,9 @@
                                     <arguments>
                                         <argument>-shared</argument>
                                         <argument>-o</argument>
-                                        <argument>${project.basedir}/src/main/resources/win32-x86-64/attach_hotspot_windows.dll</argument>
+                                        <argument>
+                                            ${project.basedir}/src/main/resources/win32-x86-64/attach_hotspot_windows.dll
+                                        </argument>
                                         <argument>${project.basedir}/src/main/c/attach_hotspot_windows.c</argument>
                                     </arguments>
                                 </configuration>
@@ -252,8 +258,37 @@
                                 </goals>
                                 <phase>prepare-package</phase>
                                 <configuration>
-                                    <outputDirectory>${project.build.outputDirectory}/META-INF/versions/9</outputDirectory>
+                                    <outputDirectory>${project.build.outputDirectory}/META-INF/versions/9
+                                    </outputDirectory>
                                     <target>1.8</target>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>${version.plugin.antrun}</version>
+                        <executions>
+                            <execution>
+                                <id>modify-source-jar</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <skip>${bytebuddy.original-sources}</skip>
+                                    <target>
+                                        <delete dir="${project.build.directory}/sources-copy" failonerror="false"/>
+                                        <unzip src="${project.build.directory}/byte-buddy-agent-${project.version}-sources.jar" dest="${project.build.directory}/sources-copy"/>
+                                        <copy todir="${project.build.directory}/sources-copy/META-INF/versions/9">
+                                            <fileset dir="${project.build.directory}/sources-copy">
+                                                <include name="net/bytebuddy/**/*.java"/>
+                                            </fileset>
+                                        </copy>
+                                        <delete file="${project.build.directory}/byte-buddy-agent-${project.version}-sources.jar"/>
+                                        <zip basedir="${project.build.directory}/sources-copy" destfile="${project.build.directory}/byte-buddy-agent-${project.version}-sources.jar"/>
+                                    </target>
                                 </configuration>
                             </execution>
                         </executions>
