--- a/byte-buddy-agent/pom.xml
+++ b/byte-buddy-agent/pom.xml
@@ -287,7 +287,7 @@
                                             </fileset>
                                         </copy>
                                         <delete file="${project.build.directory}/byte-buddy-agent-${project.version}-sources.jar"/>
-                                        <zip basedir="${project.build.directory}/sources-copy" destfile="${project.build.directory}/byte-buddy-agent-${project.version}-sources.jar"/>
+                                        <zip basedir="${project.build.directory}/sources-copy" destfile="${project.build.directory}/byte-buddy-agent-${project.version}-sources.jar" modificationtime="${project.build.outputTimestamp}"/>
                                     </target>
                                 </configuration>
                             </execution>
